--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,9 @@ kaggle==1.6.6
 ImageHash==4.3.1
 Pillow==10.2.0
 matplotlib==3.8.3
-pandas==2.1.1
+pandas==2.2.1
 numpy==1.26.4
 keras==3.1.1
 tensorflow==2.16.1
 scikit-learn==1.4.1.post1
+seaborn==0.13.2
